# Agno

./: .claude.json  .gitignore  CLAUDE.md
.claude/: settings.json
docs/: financial-assistant-analysis.md  financial-assistant-plan.md  implementation-todo.md  provider-plan.md
financial-assistant/: .env.example  .gitignore  CLAUDE.md  README.md  main.py  mypy.ini  pyproject.toml  run.py  test.db  test_end_to_end_tracing.py  test_langwatch_decorators.py  test_official_langwatch.py  test_trace_hierarchy.py
financial-assistant/docs/: langwatch-implementation-summary.md  langwatch-integration-corrected.md  langwatch-phase1-report.md  langwatch-project-configuration.md  local-langwatch-setup.md
financial-assistant/docs/research/: langwatch-research.md
financial-assistant/src/: CLAUDE.md  main.py
financial-assistant/src/claude-tests/: test_automatic_agent_tracing.py  test_langwatch_integration.py  test_local_langwatch.py
financial-assistant/src/config/: settings.py
financial-assistant/src/models/: schemas.py
financial-assistant/src/tests/: __init__.py  minimal_test_workflow.py  test_async_generator_source.py  test_debug_logging.py  test_financial_workflow.py  test_full_langfuse_integration.py  test_hello_query.py  test_langfuse_integration.py  test_langfuse_tracing_only.py  test_minimal_workflow.py  test_quick_hello.py  test_simple_workflow.py  test_single_method.py  test_workflow.py
financial-assistant/src/tools/: financial_modeling_prep.py
financial-assistant/src/workflow/: financial_assistant.py
financial-assistant/tests/: test_workflow.py
(+23 files in other folders)
